# JuaLang

./: CMakeLists.txt  JuaLang.h  JuaLangTypes.h  JuaNativeFunc.h  JuaScope.h  README.md  main.cpp  main.jua  test.cpp
JuaCompiler/: JuaLang.h  JuaLangActionFuncs.cpp  JuaLangInitFuncs.cpp  JuaLangTypes.h  JuaLangUtilFuncs.cpp  JuaMacroScope.cpp  JuaMacroScope.h  JuaNativeFunc.h  JuaScope.cpp  JuaScope.h
JuaInterpter/: JuaInterpter.cpp  JuaInterpter.h  JuaInterpter_Types.cpp  JuaInterpter_Types.h
bytecode_runner/: JuaInterpter.h  JuaModule.cpp  JuaModule.h  JuaOprand.h  test.cpp
compiler_sys/: DFAction.h  DFAction_Types.h
include/: JuaLang.h
include/JuaCompiler/: JuaLang.h  JuaLangTypes.h  JuaNativeFunc.h
include/JuaInterpter/: JuaInterpter_Types.h
include/std/console/: io.h
include/std/math/: JuaStdMath.h  README.md
include/std/preprocesses/: util.h
include/std/structures/: hashmap.h  vector.h
include/std/type/: jua_str.h
include/sys/: DFAction.h  DFAction_Types.h  README.md
jua_compiler/: JuaLang.h  JuaLangActionFuncs.cpp  JuaLangInitFuncs.cpp  JuaLangTypes.h  JuaLangUtilFuncs.cpp  JuaScope.h  test.cpp
juax_runner/: JuaInterpter.h  JuaOprand.h  test.cpp
lexer_sys/: DFMatcher.h
lib/JuaCompiler/: JuaLangActionFuncs.cpp  JuaLangInitFuncs.cpp  JuaLangNativeFunc.cpp  JuaLangUtilFuncs.cpp  JuaMacroScope.cpp  JuaScope.cpp
lib/JuaInterpter/: JuaInterpter.cpp  JuaInterpter_Types.cpp
lib/std/console/: README.md  io.cpp
lib/std/math/: JuaStdMath.cpp
lib/std/preprocesses/: util.cpp
lib/std/structures/: hashmap.cpp  vector.cpp
lib/std/type/: jua_str.cpp
std/: README.md
std/console/: io.h
std/math/: JuaStdMath.h  README.md
std/preprocesses/: util.h
std/structures/: hashmap.h  vector.h
std/type/: jua_str.h
sys/: DFAction.h  DFMatcher.h
sys_examples/: README.md  calc_test.h
